Upgraded to Java 8 and Tomcat 8.5.24